--- a/veggies_app/static/CSS/style.css
+++ b/veggies_app/static/CSS/style.css
@@ -3,3 +3,15 @@
     margin:0;
     border:dotted 1px red;
 }
+
+#wrapper{
+    width:970px;
+    margin:0 auto;
+}
+
+.logreg{
+    display: inline-block;
+    vertical-align: top;
+    width:200px;
+    margin:0 auto;
+}
